  original location after a successful robbery.

--Improved visibility of sleeping animals by bringing them up above wall
  shadows and giving them dark outlines just like other living mobiles.

--Returned to v15-style animal movement (animals start following/fleeing when
  they see you, but continue moving toward/away from you even after you move
  out of view).



Version 19   Live Server Fixes

--Wired wooden walls brought back to the game.

--Added a price tweak factors on server so that overall tile/tool price ratios
  can be adjusted more easily.  Started off with tile prices tweaked down to
  2/5 what they used to be (to allow more house building with the starting
  budget).




Version 19   2013-October-15

--Fixed an obscure bug where the tool/tile grid-picker pages could get stuck in
  a state where they would repeatedly kick you out of your house (thanks Josh
  Collins).

--Added a bounty that builds up on a robber over time to be earned by whatever
  house finally kills the robber (starting bounty 500, +500 for each theft,
  +1000 for each instance of murder).  Trying bounties in conjuction with no
  salaries (thanks Joshua Collins).

--Added a shotgun object that can be placed in the house and picked up by the
  wife as she walks across it.  Kills robber short range (when adjacent).  Wife
  collects and holds bounty for robbers that she kills.

--Fixed corner gap visibility inconsistency by applying simpler algorithm 
  (thanks Joshua Collins).

--Added a 256-step power propagation limit to prevent complex circuits that
  take many propagations to either loop or settle from potentially freezing
  the game (thanks Joshua Collins).

--Blocked quitting from house check-in/out pages when quitting could kill the
  player.




Version 18   Live Server Fixes

--Gun price up to 1200 to strengthen Pit Bulls somewhat, and Powered Door price
  down to 600 to compensate for door drawbacks.
